--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,Bold,letterpaper,TexShade]{thesis}
+\documentclass[12pt,Bold,letterpaper,TexShade]{mcgilletdclass}
 \usepackage{graphicx}
 \usepackage{geometry}
 \usepackage{texshade}
@@ -38,6 +38,7 @@
 \maketitle%
 
 \begin{romanPagenumber}{2}%
+
 
 \SetDedicationName{\MakeUppercase{Dedication}}%
 \SetDedicationText{This document is dedicated to the graduate students of the McGill University.}%
