--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -3,6 +3,11 @@
 \usepackage{geometry}
 \usepackage{texshade}
 \usepackage{textcomp}
+\usepackage{siunitx}
+
+%%%% VARIABLES %%%%%
+\newcommand{\diffusion}{$Dc$}
+\newcommand{\gct}{$\gamma$-CT}
 %\usepackage{tex4ht}
 %\usepackage{amsmath}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -96,7 +101,7 @@
 %fjklsdafjklsdafjkldasjfkldjaskl
 %\end{\ETDAppendix}%
 \bibHeading{References}
-\bibliography{mcgilletd}
+\bibliography{thesis_cgo}
 \bibliographystyle{plain}
 
 \index[abbr]{IEEE@IEEE: Institute of Electrical and Electronics Engineers, Inc.}
