--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -8,6 +8,8 @@
 %%%% VARIABLES %%%%%
 \newcommand{\diffusion}{$Dc$}
 \newcommand{\gct}{$\gamma$-CT}
+\newcommand{\dcunits}{\cm\squared\per\second}
+\newcommand{\figref}[1]{{\bf Fig. \ref{#1}}}
 %\usepackage{tex4ht}
 %\usepackage{amsmath}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
