first stab at intro

--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -4,6 +4,8 @@
 \usepackage{texshade}
 \usepackage{textcomp}
 \usepackage{siunitx}
+\usepackage{epigraph}
+
 
 %%%% VARIABLES %%%%%
 \newcommand{\diffusion}{$Dc$}
@@ -81,18 +83,22 @@
 \end{romanPagenumber}
 
 %\mainmatter %
- 
+
 \chapter{Introduction}
+\input{introduction.tex} 
+
 
 \chapter{Theory}
 \section{Intrinsically Disordered Proteins}
 \section{Gamma tubulin}
 \section{Molecular Dynamics Simulations}
-\subsection{Fixed-temperature Molecular Dynamics}
+\subsection{Fixed-temperature Molecular Dynamics }
 \subsection{Replica Exchange Molecular Dynamics}
 \section{Evolutionary Algorithms}
 \input{gctmd_chapter.tex}
+
 \chapter{MEDIEVAL}
+?A totally blind process can by definition lead to anything; it can even lead to vision itself.?  Jacques Monod
 \chapter{Conclusions}
 
 
