started disorder section

--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -84,13 +84,10 @@
 
 %\mainmatter %
 
-\chapter{Introduction}
+%introduction chapter
 \input{introduction.tex} 
 
-
 \chapter{Theory}
-\section{Intrinsically Disordered Proteins}
-\section{Gamma tubulin}
 \section{Molecular Dynamics Simulations}
 \subsection{Fixed-temperature Molecular Dynamics }
 \subsection{Replica Exchange Molecular Dynamics}
