rough draft of intro done. next g-ct section

--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -13,6 +13,10 @@
 \newcommand{\gct}{$\gamma$-CT}
 \newcommand{\dcunits}{\cm\squared\per\second}
 \newcommand{\figref}[1]{{\bf Fig. \ref{#1}}}
+
+%%% SETTINGS %%%
+\interfootnotelinepenalty=10000
+
 %\usepackage{tex4ht}
 %\usepackage{amsmath}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
