rough intro done

--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -92,7 +92,7 @@
 %introduction chapter
 \input{introduction.tex} 
 
-\chapter{Theory}
+\chapter{Methods \& Theory}
 \section{Molecular Dynamics Simulations}
 \subsection{Fixed-temperature Molecular Dynamics }
 \subsection{Replica Exchange Molecular Dynamics}
