fixed figure scaling

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,12 +1,11 @@
+%!TEX root = thesis_cgo.tex
 \chapter{Introduction}
-
-
 
 \epigraph{Everything existing in the universe is the fruit of chance and necessity.}{Democritus}
 
 Molecular machines are assemblies of proteins that interact in a coordinated manner to solve a biological problem. These biological problems, such as coordinating chromosome separation during cell division, \todo{get more examples}, etc.  cover all processes essential to life. Given the necessity for survival in the face of ever changing environments, evolution has produced a large diversity of intricate molecular mechanisms for solving these problems in a flexible and robust manner. A machine that functions properly only under unchanging conditions and inputs is not likely to survive in a biological context. Therefore, at the core of each of those processes are highly complex networks of protein interactions that are able to assemble, communicate, coordinate, self-regulate and self-correct in order to accomplish the necessary task reliably. \todo{maybe put DNA example in next paragraph}For example, the vital process of DNA replication is executed by a large multitude of proteins that each contribute to the process of copying the genome. The replication machinery must read environmental queues for initiating replication at the correct time, while complex combinatoric signalling networks ensure that DNA replication unfolds in a processive manner, enzymatic components perform physical work by unwinding the DNA strand for copying, and others communicate with the DNA repair machinery to correct copying errors and avoid harmful mutations. It is clear that solving this biological problem requires the ability of participating proteins to interact with many different partners and mediate many different processes.  
 
-The way that proteins are able to control interactions and drive function is through the dynamic properties of their structural domains encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. \todo{include figure of yeast $\gamma$-tubulin structure to illustrate stable vs IDP} Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that motions between structural conformations is the main element of control in protein function. For example, \todo{example of basic protein structure-rearrangement}. \figref{tub4} It is important to note that X-ray crystallography sill offers only static pictures of protein structure, and provides information mostly the spatial arrangement of relatively large stable domains in proteins. Yet, as we saw with DNA replication, molecular processes are incredibly complex, and a single protein often has to play many roles, interact with various different partners and be able to do so in a rapid and controllable manner. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. How can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
+The way proteins are able to control interactions and drive function is through the conformational arrangement of their backbones which is encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. \todo{include figure of yeast $\gamma$-tubulin structure to illustrate stable vs IDP} Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that motions between structural conformations is the main element of control in protein function. For example, \todo{example of basic protein structure-rearrangement}. \figref{tub4}  However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function. Yet, as we saw with DNA replication, molecular processes are incredibly complex, and a single protein often has to play many roles, interact with various different partners and be able to do so in a rapid and controllable manner. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with the questions of how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
 
 
 
@@ -17,9 +16,9 @@ One potential source of plasticity can be found when looking more closely at pro
 For a long time, these types of protein element were overlooked in favour of studying stable folding patterns. In the case of IDRs, IDRs were thought to act simply as flexible linkers between structural domains without any  function or their own. This was also due in part to the fact that the main tool being used for structural biology, X-ray crystallography, fails to detect patterns in unfolded chains, making it difficult to study highly dynamic elements in protein such as IDPs. Techniques that do produce information on dynamics such as NMR only developed for proteins until much later; the first protein structure solved by X-ray crystallography was in 1958 and it was not until 1984 when the first protein structure was solved using NMR. Likewise, computational tools to study protein dynamics {\it ab initio}, such as Molecular Dynamics (MD) were greatly limited by shortcomings in processor power. However, with large advances in experimental and computational techniques in recent years, we have been able to study the dynamic properties of IDEs in great detail, and have found that they play key roles in the functioning of molecular machines. 
 
 
-\begin{figure}[h]
+\begin{figure}
 \centering
-\includegraphics[width=0.3\linewidth]{figures/tub4_tyr.png}
+\includegraphics[height=0.3\textheight]{figures/tub4_tyr.png}
 \caption{Homology model}
 \end{figure}
 
