--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -35,7 +35,7 @@
 %%                                                 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%       Define student-specific info
-\SetTitle{\huge{Local charge to global structure in the face of disorder.}}%
+\SetTitle{\huge{Title}}%
 \SetAuthor{Carlos G. Oliver}%
 \SetDegreeType{Master of Science}%
 \SetDepartment{Department of Biology}%
