--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -1,7 +1,9 @@
 %!TEX root = thesis_cgo.tex
 \chapter{Conformational analysis of the $\gamma$-Tubulin carboxyl terminus}
 
-In this chapter we discuss the impact of local charge on the global dynamics of the $\gamma$-Tubulin C-terminus (\gct{}). In order to measure how the addition of local negative charge in an acidic polypeptide affects the conformational sampling of the \gct{}, we simulated the dynamics of various isoforms of the \gct{} using MD. By comparing results from our simulations to experimental measurements performed with NMR spectroscopy on the \gct{}, we were able to propose that local changes in charge at specific residues in the polypeptide have the ability to bias the conformational sampling of the \gct{} in such a way that may be regulating the availability of binding surfaces on $\gamma$-Tubulin.
+In this chapter we discuss the impact of local charge on the global dynamics of the $\gamma$-Tubulin C-terminus (\gct{}). We begin from the facts that the \gct{} has been shown to be phosphorylated {\it in vivo}, and that mutating the phosphorylation site to mimic the electrostatic conditions of a constitutive phosphorylation show significant phenotypes on the mitotic spindle. We therefore hypothesize that phosphorylation at the \gct{} IDP is acting to regulate spindle dynamics via a structural mechanism.
+
+In order to measure how the addition of local negative charge in an acidic polypeptide affects the conformational sampling of the \gct{}, we simulated the dynamics of two isoforms of the \gct{} using MD. By comparing results from our simulations to experimental measurements performed with NMR spectroscopy on the \gct{}, we were able to propose that local changes in charge at specific residues in the polypeptide have the ability to bias the conformational sampling of the \gct{} in such a way that may be regulating the availability of binding surfaces on $\gamma$-Tubulin. Furthermore, we describe a novel mode of IDP function where functionality arises from transitions that lie entirely within disordered states.
 
 \section{NMR}
 Talk about NMR stuff here.
