--- a/introduction.tex
+++ b/introduction.tex
@@ -66,7 +66,7 @@ One of the best studied phosphorylation sites in $\gamma$-Tubulin is the heavily
  
  \section{Approach}
  
-In order to detect the rapid changes in conformational sampling, we use a powerful computational technique known as Molecular Dynamics (MD) simulations. We will be simulating the dynamics of the \gct{} in isolation as well as in the presence of the entire $\gamma$-Tubulin protein. \todo{should I bring up NMR here?}
+In order to detect the rapid changes in conformational sampling, we use a powerful computational technique known as Molecular Dynamics (MD) simulations. We will be simulating the dynamics of two forms of the \gct{}: WT, and Y445D. We will perform simulations on the \gct{} in isolation as well as in the presence of the entire $\gamma$-Tubulin protein. \todo{should I bring up NMR here?}
 
 \todo{Notes from jackie: keep REMD in discussion as possible method. Tony says REMD more for overcoming enthalpies not entropic barriers so not good for IDPs. Need to sample for longer to see changes.}
  
