--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -9,6 +9,7 @@
 \usepackage{todonotes}
 \usepackage{physics}
 \usepackage{graphicx}
+\usepackage{subfigure}
 
 %%%% VARIABLES %%%%%
 \newcommand{\diffusion}{$Dc$}
